[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-projects"
version = "0.1.0"
description = "Reinforcement learning algorithms and examples."
readme = "ReadMe.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[toy-text]>=0.28",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["core", "examples", "tests"]
extend-exclude = ["results"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
